--- a/Instanssi/main2018/static/main2018/css/style.scss
+++ b/Instanssi/main2018/static/main2018/css/style.scss
@@ -192,9 +192,9 @@ $main-content-height: calc(100vh - #{$main-header-actual} - #{$main-footer-actua
     #page-header {
         // provide some background for style
         background: #111122;
-        background: linear-gradient($theme-color 0, #012 200px);
+        background: linear-gradient(($theme-color * 0.5) 0, #012 200px);
 
-        .header-bg, .snek {
+        .header-bg {
             display: none;
         }
 
